[gd_scene load_steps=9 format=3 uid="uid://i9ao3q4rvz0ws"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_main"]
[ext_resource type="PackedScene" path="res://scenes/player/player.tscn" id="2_player"]
[ext_resource type="PackedScene" path="res://scenes/world/chunk_manager.tscn" id="3_chunk_manager"]
[ext_resource type="PackedScene" path="res://scenes/environment/day_night_controller.tscn" id="4_day_night"]
[ext_resource type="PackedScene" path="res://scenes/environment/background_rings.tscn" id="5_bg_rings"]
[ext_resource type="PackedScene" path="res://scenes/environment/cloud_layers.tscn" id="6_clouds"]
[ext_resource type="PackedScene" path="res://scenes/environment/sky_dome.tscn" id="7_sky"]
[ext_resource type="Script" path="res://scripts/environment/background_follow.gd" id="8_follow"]

[node name="Main" type="Node3D"]
script = ExtResource("1_main")

[node name="Player" parent="." instance=ExtResource("2_player")]

[node name="BackgroundRings" parent="." instance=ExtResource("5_bg_rings")]
script = ExtResource("8_follow")

[node name="CloudLayers" parent="." instance=ExtResource("6_clouds")]
script = ExtResource("8_follow")

[node name="SkyDome" parent="." instance=ExtResource("7_sky")]
script = ExtResource("8_follow")

[node name="ChunkManager" parent="." instance=ExtResource("3_chunk_manager")]

[node name="DayNightController" parent="." instance=ExtResource("4_day_night")]

[node name="UI" type="CanvasLayer" parent="."]

[node name="FPSLabel" type="Label" parent="UI"]
offset_left = 10.0
offset_top = 10.0
offset_right = 100.0
offset_bottom = 30.0
text = "FPS: 0"

[node name="TimeLabel" type="Label" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 30.0
grow_horizontal = 0
text = "12:00"
horizontal_alignment = 2

[node name="DebugLabel" type="Label" parent="UI"]
offset_left = 10.0
offset_top = 35.0
offset_right = 300.0
offset_bottom = 250.0
